--- a/group_vars/all/inventory_sources.yml
+++ b/group_vars/all/inventory_sources.yml
@@ -21,3 +21,5 @@ controller_inventory_sources:
           separator: ''
         - key: parent
           separator: ''
+        - key: tags
+          separator: ''
