--- a/group_vars/all/inventory_sources.yml
+++ b/group_vars/all/inventory_sources.yml
@@ -3,7 +3,7 @@ controller_inventory_sources:
   - name: vmware-vms
     organization: Default
     source: vmware
-    inventory: VMware Inventory
+    inventory: VMware VM Inventory
     credential: vCenter Inventory User
     overwrite: true
     overwrite_vars: true
@@ -23,3 +23,15 @@ controller_inventory_sources:
           separator: ''
         - key: tags
           separator: ''
+  - name: vmware-esxi-hosts
+    organization: Default
+    source: scm
+    source_project: VMware ESXI Inventory
+    source_path: esxi.vmware.yml
+    inventory: VMware ESXI Inventory
+    credential: vCenter Inventory User
+    overwrite: true
+    overwrite_vars: true
+    update_on_launch: false
+    update_cache_timeout: 0
+    execution_environment: vmware-ee
