--- a/group_vars/all/credentials.yml
+++ b/group_vars/all/credentials.yml
@@ -8,4 +8,10 @@ controller_credentials:
       host: "{{ vmware_vcenter_url }}"
       username: "{{ vmware_username }}"
       password: "{{ vmware_password }}"
-    
+  - name: github_credential
+    credential_type: Source Control
+    organization: Default
+    description: Github credentials
+    inputs:
+      username: "{{ github_username }}"
+      password: "{{ github_password }}"
